# django_basic_analytics_tracker

./: .gitignore  README.md  setup.cfg  setup.py
basic_analytics_tracker/: apps.py  mixins.py  views.py
basic_analytics_tracker/tests/: test_tracking_mixin.py
