[metadata]
name = django-basic-analytics-tracker
version = 0.1
description = Django app that provides utilities for sending data to the Basic Analytics API.
long_description = file: README.md
url = https://github.com/abel-castro/django_basic_analytics_tracker
author = Abel Castro
author_email = hi@abelcastro.dev
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8